[package]
name = "rusty-raft"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "core",
    "proto-*",
]

[dependencies]

[dev-dependencies]
env_logger = "0.9.0"
log = "0.4"
raft = { path = "core" }
sled = "0.34.7"
bincode = "1.3.3"
serde = { version = "1.0.145", features = ["derive"] }
crossbeam-channel = "0.5.6"
ctrlc = "3.2.3"
clap = { version = "4.0.10", features = ["cargo"] }
proto-grpc = { path = "proto-grpc" }
